# rubiks-cube

./: CMakeLists.txt  README.md  main.cpp
models/: 1DModel.cpp  3DModel.cpp  bitsModel.cpp  generic_cube.cpp  generic_cube.h
patternDB/: corner_patternDB.cpp  corner_patternDB.h  corner_patternDB_maker.cpp  corner_patternDB_maker.h  nibble_array.cpp  nibble_array.h  patternDBstructure.cpp  patternDBstructure.h  perm_indexer.h  reqmath.cpp  reqmath.h
solvers/: bfs_solver.h  dfs_solver.h  idastar_solver.h  iddfs_solver.h
